# InitialTest

./: .env-example  .gitignore  Dockerfile  Jenkinsfile  README.md  db.sqlite3  docker-compose.django.yml  docker-compose.postgre.yml  docker-compose.redis.yml  docker-compose.rust.yml  engineering-notes.md  insomnia-collection.yaml  pyproject.toml
apps/analytics/services/: summary_reader.py
apps/analytics/sql/: investment_summary.sql
apps/integrations/: exchange_providers.py  schema.py
apps/integrations/contracts/: settlement.py
apps/integrations/exchange/: providers.py
apps/investments/: constants.py  consumers.py  models.py  pagination.py  routing.py  schema.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
apps/investments/migrations/: 0001_initial.py  0002_rename_currrent_value_userinvestment_current_value.py
apps/investments/ml/: fraud_detector.py  train_model.py
apps/investments/services/: cached_investment_service.py  matching_engine.py  statement_service.py  yield_calculation_service.py
apps/notifications/: events.py
apps/users/: models.py  permissions.py  views.py
apps/wallets/: tasks.py
config/: asgi.py  celery.py  db_routers.py  routing.py  schema.py  settings.py  urls.py
config/middleware/: audit_middleware.py
engine/: Cargo.toml
engine/src/: block.rs  chain.rs  crypto.rs  main.rs  rpc.rs  transaction.rs
orchest-k8s-ref/: Makefile  README.md
orchest-k8s-ref/k8s/: configmap.yaml  django-deployment.yaml  engine-deployment.yaml  ingress.yaml  postgres-deployment.yaml  redis-deployment.yaml  secret.yaml
(+10 files in other folders)
